Done refactoring on permission predicates